kubernetes/api-gateway-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
spec:
  containers:
  - image: api-gateway
    name: api-gateway
    ports:
    - containerPort: 8080
    resources: {}
  restartPolicy: OnFailure
status: {}
