kubernetes/hall-planning-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: hall-planning
  name: hall-planning
spec:
  containers:
  - image: hall-planning
    name: hall-planning
    ports:
    - containerPort: 2223
    resources: {}
  restartPolicy: OnFailure
status: {}
