kubernetes/moviedb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes
    kompose.version: 1.20.0 (f3d54d784)
  creationTimestamp: null
  labels:
    io.kompose.service: moviedb
  name: moviedb
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kubernetes
        kompose.version: 1.20.0 (f3d54d784)
      creationTimestamp: null
      labels:
        io.kompose.service: moviedb
    spec:
      containers:
      - env:
        - name: MONGO_INITDB_DATABASE
          value: movie
        - name: MONGO_INITDB_ROOT_PASSWORD
          value: ThePassword
        - name: MONGO_INITDB_ROOT_USERNAME
          value: root
        image: mongo:4.2
        name: moviedb
        ports:
        - containerPort: 27017
        resources: {}
      restartPolicy: Always
status: {}
