kubernetes/mysqldb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes
    kompose.version: 1.20.0 (f3d54d784)
  creationTimestamp: null
  labels:
    io.kompose.service: mysqldb
  name: mysqldb
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kubernetes
        kompose.version: 1.20.0 (f3d54d784)
      creationTimestamp: null
      labels:
        io.kompose.service: mysqldb
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          value: ThePassword
        image: mysqldb
        name: mysqldb
        ports:
        - containerPort: 3306
        resources: {}
      restartPolicy: Always
status: {}
