kubernetes/shop-service-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: shop-service
  name: shop-service
spec:
  containers:
  - image: shop-service
    name: shop-service
    ports:
    - containerPort: 2230
    resources: {}
  restartPolicy: OnFailure
status: {}
