kubernetes/hall-planning-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes
    kompose.version: 1.20.0 (f3d54d784)
  creationTimestamp: null
  labels:
    io.kompose.service: hall-planning
  name: hall-planning
spec:
  ports:
  - name: "2223"
    port: 2223
    targetPort: 2223
  selector:
    io.kompose.service: hall-planning
status:
  loadBalancer: {}
