kubernetes/hall-planning.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hall-planning
  name: hall-planning
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hall-planning
  template:
    metadata:
      labels:
        app: hall-planning
    spec:
      containers:
      - image: rgoussey/hall-planning:latest
        name: hall-planning
        ports:
        - containerPort: 2223
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hall-planning
  name: hall-planning
spec:
  type: ClusterIP
  ports:
  - name: "2223"
    port: 2223 # inside the cluster
    targetPort: 2223 # pod port, same as containerPort
  selector:
    app: hall-planning
