kubernetes/moviedb.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: moviedb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moviedb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: moviedb
        choas: immune
    spec:
      containers:
      - image: mongo
        name: moviedb
        ports:
        - containerPort: 3306
          name: moviedb
        volumeMounts:
        - name: mongo-persistent-storage
          mountPath: /var/lib/mongo
      volumes:
      - name: mongo-persistent-storage
        persistentVolumeClaim:
          claimName: mongo-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: moviedb
spec:
  ports:
  - name: "27017"
    port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    app: moviedb
