kubernetes/parking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: parking
  name: parking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parking
  template:
    metadata:
      labels:
        app: parking
    spec:
      containers:
      - image: thomasneuser/parking:latest
        name: parking
        ports:
        - containerPort: 2301
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: parking
  name: parking
spec:
  type: ClusterIP
  ports:
  - name: "2301"
    port: 2301 # inside the cluster
    targetPort: 2301 # pod port, same as containerPort
  selector:
    app: parking
